--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/bcoe/release-please-action#readme",
   "dependencies": {
     "@actions/core": "^1.10.0",
-    "release-please": "^15.13.0"
+    "release-please": "https://github.com/stan-stately/release-please.git#ac309f0b74f5302eee2acda68808446a4491a813"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.38.0",
